--- a/.github/workflows/build-publish-web.yml
+++ b/.github/workflows/build-publish-web.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Build & tag Docker image
         run: |
           docker build \
+            --build-arg API_BASE_URL=${{ secrets.API_BASE_URL }} \
             -t ghcr.io/${{ github.repository_owner }}/mokengeli-biloko-management:${{ github.sha }} \
             -t ghcr.io/${{ github.repository_owner }}/mokengeli-biloko-management:latest \
             .
