--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-tabs": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.3",
     "@reduxjs/toolkit": "^2.6.1",
+    "@tailwindcss/postcss": "^4.1.8",
     "@tanstack/react-query": "^5.75.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -31,6 +32,7 @@
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
+    "postcss": "^8.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
@@ -38,17 +40,15 @@
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5",
+    "tailwindcss": "^4.1.8",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.3.4",
     "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.3.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4",
-    "tailwindcss-animate": "^1.0.7"
+    "eslint-config-next": "15.3.0"
   }
 }
