--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "cmdk": "^1.1.1",
     "framer-motion": "^12.7.3",
     "lucide-react": "^0.488.0",
-    "next": "15.3.0",
+    "next": "^15.4.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -47,7 +47,7 @@
     "@tailwindcss/postcss": "^4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.3.0",
+    "eslint-config-next": "^15.4.4",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
     "tailwindcss-animate": "^1.0.7"
