--- a/.github/workflows/build-publish-web.yml
+++ b/.github/workflows/build-publish-web.yml
@@ -14,7 +14,7 @@ jobs:
     environment:
         name: general
     env:
-      NEXT_PUBLIC_API_BASE_URL: ${{ secrets.API_BASE_URL }}
+      NEXT_PUBLIC_API_BASE_URL: ${{ vars.API_BASE_URL }}
 
     steps:
       - name: Checkout code
@@ -25,10 +25,13 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install deps & build
-        run: |
-          npm ci
-          npm run build
+      - name: Cache Node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Login to GHCR
         uses: docker/login-action@v2
@@ -40,7 +43,7 @@ jobs:
       - name: Build & tag Docker image
         run: |
           docker build \
-            --build-arg API_BASE_URL=${{ secrets.API_BASE_URL }} \
+            --build-arg API_BASE_URL=${{ vars.API_BASE_URL }} \
             -t ghcr.io/${{ github.repository_owner }}/mokengeli-biloko-management:${{ github.sha }} \
             -t ghcr.io/${{ github.repository_owner }}/mokengeli-biloko-management:latest \
             .
