--- a/.github/workflows/build-publish-prod.yml
+++ b/.github/workflows/build-publish-prod.yml
@@ -14,7 +14,7 @@ jobs:
     environment:
         name: general
     env:
-      NEXT_PUBLIC_API_BASE_URL: ${{ vars.API_BASE_URL }}
+      NEXT_PUBLIC_API_BASE_URL: ${{ vars.PROD_API_BASE_URL }}
 
     steps:
       - name: Checkout code
@@ -43,7 +43,7 @@ jobs:
       - name: Build & tag Docker image
         run: |
           docker build \
-            --build-arg API_BASE_URL=${{ vars.API_BASE_URL }} \
+            --build-arg API_BASE_URL=${{ vars.PROD_API_BASE_URL }} \
             -t ghcr.io/${{ github.repository_owner }}/mokengeli-biloko-management:${{ github.sha }} \
             -t ghcr.io/${{ github.repository_owner }}/mokengeli-biloko-management:latest \
             .
